en and ch version ready

--- a/about-cn-bcol.html
+++ b/about-cn-bcol.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>About the CN-BCOL 2020 Chinese Blockchain Olympiad | IBCOL 2020 International Blockchain Olympiad</title>
+    <title>关于我们 - CN-BCOL 2020 中国区块链奥林匹克竞赛 | IBCOL 国际区块链奥林匹克竞赛</title>
     <link rel="icon" href="./images/logo/IBCOL-CN.png" type="image/gif" sizes="16x16">
     <meta name="description" content="" />
     <meta name="author" content="" />
@@ -48,28 +48,29 @@
         </div>
         <div class="desktop-nav">
             <ul class="nav_list">
-                <li><a class="NavLinkComponent pageAnchorColor" route="" href="about-cn-bcol.html">About</a></li>
-                <li><a class="NavLinkComponent " route="" href="how-to-join-cn-bcol.html">How To Join</a></li>
-                <li><a class="NavLinkComponent " route="" href="get-started-with-cn-bcol.html">Get Started</a>
+                <li><a class="NavLinkComponent pageAnchorColor" route="" href="about-cn-bcol.html">关于我们</a></li>
+                <li><a class="NavLinkComponent " route="" href="how-to-join-cn-bcol.html"> 如何参加</a></li>
+                <li><a class="NavLinkComponent " route="" href="get-started-with-cn-bcol.html"> 参赛详情</a>
                 </li>
-                <li><a class="NavLinkComponent" route="" href="faq-cn-bcol.html" class="">FAQ</a></li>
-                <li><a class="NavLinkComponent " route="" href="contact-cn-bcol.html" class="">Contact</a></li>
+                <li><a class="NavLinkComponent" route="" href="faq-cn-bcol.html" class="">常见问题 </a></li>
+                <li><a class="NavLinkComponent " route="" href="contact-cn-bcol.html" class=""> 联络我们</a></li>
                 <li class=""><a class="NavLinkComponent regBorder2 colorWt2" route=""
-                        href="https://www.ibcol.org/registrar/registrar.html" target="_blank">REGISTER</a></li>
-                <li><a class="NavLinkComponent " route="" href="contact-cn-bcol.html" class="">中文</a></li>
+                        href="https://www.ibcol.org/registrar/registrar.html" target="_blank">注册</a></li>
+                <li><a class="NavLinkComponent" route="" href="./en/about-cn-bcol.html" class="">EN</a></li>
             </ul>
         </div>
 
         <nav class="header-nav">
-            <a href="#0" class="header-nav__close" title="close"><span>Close</span></a>
+            <a href="#0" class="header-nav__close" title="close"><span>关闭</span></a>
             <div class="header-nav__content">
                 <ul class="header-nav__list">
-                    <li><a href="about-cn-bcol.html">About</a></li>
-                    <li><a href="how-to-join-cn-bcol.html">How To Join</a></li>
-                    <li><a href="get-started-with-cn-bcol.html">Get Started</a></li>
-                    <li><a href="faq-cn-bcol.html">FAQ</a></li>
-                    <li class="featured"><a href="contact-cn-bcol.html">Contact</a></li>
-                    <li><a href="https://www.ibcol.org/registrar/registrar.html" target="_blank">REGISTER</a></li>
+                    <li><a href="about-cn-bcol.html">关于我们</a></li>
+                    <li><a href="how-to-join-cn-bcol.html"> 如何参加</a></li>
+                    <li><a href="get-started-with-cn-bcol.html"> 参赛详情</a></li>
+                    <li><a href="faq-cn-bcol.html">常见问题 </a></li>
+                    <li class="featured"><a href="contact-cn-bcol.html"> 联络我们</a></li>
+                    <li><a href="https://www.ibcol.org/registrar/registrar.html" target="_blank">注册</a></li>
+                    <li><a class="NavLinkComponent" route="" href="./en/about-cn-bcol.html" class="">EN</a></li>
                 </ul>
             </div>
         </nav>
@@ -82,7 +83,7 @@
     <section class="s-section target-section topSection">
         <div class="container-fluid">
             <div class="row section-header ">
-                <h1 class="headerBlueText">ABOUT THE CHINESE BLOCKCHAIN OLYMPIAD </h1>
+                <h1 class="headerBlueText">关于中国区块链奥林匹克竞赛 </h1>
             </div>
         </div>
 
@@ -92,36 +93,50 @@
 
                     <div class="row mt-3 mb-5">
                         <div class="photoTitle">
-                            <h2 style="all:unset;">IBCOL in China</h2>
+                            <h2 style="all:unset;">区块链在中国发展的趋势</h2>
                         </div>
-                        <div class="photoDesc pt-4 pb-4 pr-4 justify">The Chinese Blockchain Olympiad (CN-BCOL) is the
-                            national blockchain olympiad committee working with some academic and industry professionals
-                            in China. For IBCOL 2019, three teams represented China: from Guangzhou Civil Aviation
-                            College (廣州民航職業技術學院) which won 3rd place; from Sun Yat-Sen University (中山大學); from Nanjing
-                            Agricultural University (南京農業大學). For IBCOL 2020, the CN-BCOL will select up to 12 projects
-                            to represent China.
-
-
-
-
+                        <div class="photoDesc pt-4 pb-4 pr-4 justify">
+                            2018年5月28日，习近平主席在中国科学院第十九次院士大会、中国工程院第十四次院士大会上发表建设世界科技强国的讲话，明确区块链技术是中国科技强国，中华民族伟大复兴重要的科技力量。
+                            <br> <br>
+                            2020年4月13日，工业和信息化部科技司发布《全国区块链和分布式记账技术标准化技术委员会组建公示》，当中根据国家标准化管理委员会的批复，有关单位提出了全国区块链和分布式记账技术标准化技术委员会组建方案。目前区块链已提升到国家战略高度，能入围这样一份名单，也无疑肩负着国家的期待，当然BATJ均上榜。
                         </div>
                     </div>
 
-                    <div class="row">
+                    <div class="row mt-3 mb-5">
                         <div class="photoTitle">
-                            <h2 style="all:unset;">Mission</h2>
+                            <h2 style="all:unset;">CN-BCOL 2020</h2>
                         </div>
-                        <div class="photoDesc pt-4 pb-4 pr-4 justify"> The International Blockchain Olympiad (IBCOL) is
-                            an
-                            annual global
-                            competition inviting current and recent students to propose solutions for real-world
-                            problems with blockchain technology. In a worldwide hunt for blockchain talent, IBCOL
-                            combines the practicality of case competitions with the open-ended problem-solving culture
-                            of hack-a-thons, where participants submit a whitepaper like an academic conference and
-                            implementations of capstone projects.
+                        <div class="photoDesc pt-4 pb-4 pr-4 justify">
+                            中国区块链奥林匹克竞赛委员会（CN-BCOL）是国际区块链奥林匹克委员会与中国的一些学术和行业专业人士共同组成。在IBCOL
+                            2019上，三支代表中国的参赛队伍分别来自广州民航职业技术学院（获得IBCOL 2019-铜奖）、中山大学和南京农业大学。而今年的IBCOL
+                            2020，CN-BCOL将会选出最多12支中国代表队伍参加竞赛。
                         </div>
                     </div>
-                    <div class="row colorBk">
+
+                    <div class="row mt-3 mb-5">
+                        <div class="photoTitle">
+                            <h2 style="all:unset;">CN-BCOL 合作伙伴</h2>
+                        </div>
+                        <div class="photoDesc pt-4 pb-4 pr-4 justify">
+                            TDI 和 iCollege
+                            为「国际区块链奥林匹克竞赛」（“IBCOL”）的中国委员会「中国区块链奥林匹克竞赛」（“CN-BCOL”）的合作伙伴，为中国参赛者提供培训及提名国家代表队参加「国际区块链奥林匹克竞赛2020」（“
+                            IBCOL 2020 ”）。
+                            <br> <br>
+                            TDI（Talent Development Institute）
+                            TDI（Talent Development Institute ）是来自加拿大的国际组织，TDI的使命是以寻找下一个天才为目标的培养人才（非牟利）机构。
+                            TDI透过与各种合作伙伴的培训计划教导学生知识和技能，以协助其发挥所有的潜力。TDI的证书课程更可帮助政府机构、企业、学院、私人公司等找到所需的人才，以满足市场的高需求。
+                            <br> <br>
+                            iCollege
+                            iCollege是一间科技教育机构，iCollege的教学宗旨是intelligent & infinitas,
+                            课程设计以轻松、有趣但又有效的多元方式为目标，让学生都以聪明的学习方式学习。我们更会引发出学生内在无限的潜能，令其尽展所长。
+
+                        </div>
+                    </div>
+
+
+
+
+                    <!-- <div class="row colorBk">
                         <ul>
                             <li class="p-4 justify"><b>Promoting Awareness on Blockchain Technology & Applications:</b>
                                 students from
@@ -140,8 +155,8 @@
                                 to identify and overcome challenges in actually making something happen.
                             </li>
                         </ul>
-                    </div>
-                    <div class="row mt-3">
+                    </div> -->
+                    <!-- <div class="row mt-3">
                         <div class="photoTitle">
                             <h2 style="all:unset;">History</h2>
                         </div>
@@ -152,7 +167,7 @@
                             long-term development of the blockchain ecosystem.
 
                         </div>
-                    </div>
+                    </div> -->
 
                 </div>
 
@@ -182,8 +197,9 @@
 
     <div class="home-content__button aboveFooterBtn">
         <a href="https://www.ibcol.org/registrar/registrar.html" target="_blank"
-            class="btn btn--primary btn--large fs18">REGISTER</a>
-        <a href="https://www.ibcol.org/index.html" target="_blank" class="btn btn--large fs18">FIND OUT MORE </a>
+            class="btn btn--primary btn--large fs18">注册</a>
+        <a href="https://www.ibcol.org/index.html" target="_blank" class="btn btn--large fs18">发掘更多
+        </a>
     </div>
 
 
@@ -192,22 +208,18 @@
         <div class="ss-go-top"></div>
         <div class="row">
             <div class="col-md-4 col-sm-4 mt-3 ">
-                <div class="footerHeaderText"><b>About Us</b> </div>
+                <div class="footerHeaderText left"><b>关于我们</b> </div>
                 <div class="">
-                    <p class="footerParaText">The International Blockchain Olympiad (IBCOL) is an annual global
-                        competition inviting
-                        current and recent students to propose solutions for real-world problems with blockchain
-                        technology </p>
+                    <p class="footerParaText justify">国际区块链奥林匹克竞赛（I​​BCOL）是一年一度的全球性竞赛，邀请在学和刚毕业的学生参加，提供利用区块链技术解决真赛世界困难的方案。 </p>
                 </div>
             </div>
 
             <div class="col-md-4 col-sm-4 mt-3 ">
-                <div class=" footerHeaderText"><b>Follow Us</b> </div>
+                <div class=" footerHeaderText left"><b>关注我们</b> </div>
                 <div class="row">
                     <div class="col-12">
-                        <p class="footerParaText">Follow the International Blockchain Olympiad (IBCOL) on the follow
-                            social media
-                            channels</p>
+                        <p class="footerParaText justify">关注国际区块链奥林匹克（IBCOL）社交媒体频道可得到更多最新资讯
+                        </p>
                     </div>
                     <br>
                     <div class="col-12 ">
@@ -225,15 +237,15 @@
             </div>
 
             <div class="col-md-4 col-sm-4 mt-3">
-                <div class=" footerHeaderText"><b>Contact Us</b> </div>
+                <div class=" footerHeaderText left"><b> 联络我们</b> </div>
                 <div class="row">
                     <div class="col-12">
-                        <p class="footerParaText mb-4">Chinese Blockchain Olympiad<br>
+                        <p class="footerParaText mb-4 justify">中国区块链奥林匹克竞赛<br>
                             <a href=""><b>cn@ibcol.org</b></a></p>
                     </div>
 
                     <div class="col-12">
-                        <p class="footerParaText">2020 International Blockchain Olympiad<br>
+                        <p class="footerParaText justify">国际区块链奥林匹克竞赛<br>
                             <a href=""><b>2020@ibcol.org</b></a>
                         </p>
                     </div>
