--- a/contact-cn-bcol.html
+++ b/contact-cn-bcol.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Contact the CN-BCOL 2020 Chinese Blockchain Olympiad | IBCOL 2020 International Blockchain Olympiad
+    <title> 联络我们 - CN-BCOL 2020 中国区块链奥林匹克竞赛 | IBCOL 国际区块链奥林匹克竞赛
     </title>
     <link rel="icon" href="./images/logo/IBCOL-CN.png" type="image/gif" sizes="16x16">
     <meta name="description" content="" />
@@ -45,34 +45,36 @@
     <header class="s-header">
         <div class="header-logo">
             <a class="site-logo" href="index.html">
-                <img src="images/logo/resized/IBCOL CN Horizontal v2.png" alt="IBCOL: International Blockchain Olympiad" />
+                <img src="images/logo/resized/IBCOL CN Horizontal v2.png"
+                    alt="IBCOL: International Blockchain Olympiad" />
             </a>
         </div>
         <div class="desktop-nav">
             <ul class="nav_list">
-                <li><a class="NavLinkComponent " route="" href="about-cn-BCOL.html">About</a></li>
-                <li><a class="NavLinkComponent " route="" href="how-to-join-cn-BCOL.html">How To Join</a></li>
-                <li><a class="NavLinkComponent " route="" href="get-started-with-cn-BCOL.html">Get Started</a>
+                <li><a class="NavLinkComponent " route="" href="about-cn-BCOL.html">关于我们</a></li>
+                <li><a class="NavLinkComponent " route="" href="how-to-join-cn-BCOL.html"> 如何参加</a></li>
+                <li><a class="NavLinkComponent " route="" href="get-started-with-cn-BCOL.html"> 参赛详情</a>
                 </li>
-                <li><a class="NavLinkComponent " route="" href="faq-cn-BCOL.html" class="">FAQ</a></li>
-                <li><a class="NavLinkComponent pageAnchorColor" route="" href="contact-cn-BCOL.html"
-                        class="">Contact</a></li>
+                <li><a class="NavLinkComponent " route="" href="faq-cn-BCOL.html" class="">常见问题 </a></li>
+                <li><a class="NavLinkComponent pageAnchorColor" route="" href="contact-cn-BCOL.html" class=""> 联络我们</a>
+                </li>
                 <li class=""><a class="NavLinkComponent regBorder2 colorWt2" route=""
-                        href="https://www.ibcol.org/registrar/registrar.html" target="_blank">REGISTER</a></li>
-                <li><a class="NavLinkComponent" route="" href="contact-cn-bcol.html" class="">中文</a></li>
+                        href="https://www.ibcol.org/registrar/registrar.html" target="_blank">注册</a></li>
+                <li><a class="NavLinkComponent" route="" href="./en/contact-cn-bcol.html" class="">EN</a></li>
             </ul>
         </div>
 
         <nav class="header-nav">
-            <a href="#0" class="header-nav__close" title="close"><span>Close</span></a>
+            <a href="#0" class="header-nav__close" title="close"><span>关闭</span></a>
             <div class="header-nav__content">
                 <ul class="header-nav__list">
-                    <li><a href="about-cn-BCOL.html">About</a></li>
-                    <li><a href="how-to-join-cn-BCOL.html">How To Join</a></li>
-                    <li><a href="get-started-with-cn-BCOL.html">Get Started</a></li>
-                    <li><a href="faq-cn-BCOL.html">FAQ</a></li>
-                    <li class="featured"><a href="contact-cn-BCOL.html">Contact</a></li>
-                    <li><a href="https://www.ibcol.org/registrar/registrar.html" target="_blank">REGISTER</a></li>
+                    <li><a href="about-cn-BCOL.html">关于我们</a></li>
+                    <li><a href="how-to-join-cn-BCOL.html"> 如何参加</a></li>
+                    <li><a href="get-started-with-cn-BCOL.html"> 参赛详情</a></li>
+                    <li><a href="faq-cn-BCOL.html">常见问题 </a></li>
+                    <li class="featured"><a href="contact-cn-BCOL.html"> 联络我们</a></li>
+                    <li><a href="https://www.ibcol.org/registrar/registrar.html" target="_blank">注册</a></li>
+                    <li><a class="NavLinkComponent" route="" href="./en/contact-cn-bcol.html" class="">EN</a></li>
                 </ul>
             </div>
         </nav>
@@ -85,7 +87,7 @@
     <section class="s-section target-section topSection">
         <div class="container-fluid">
             <div class="row section-header ">
-                <h1 class="headerBlueText">CONTACT THE 2020 CHINESE BLOCKCHAIN OLYMPIAD</h1>
+                <h1 class="headerBlueText">联络中国区块链奥林匹克竞赛2020 ( CN-BCOL 2020) </h1>
             </div>
         </div>
 
@@ -95,7 +97,7 @@
                 <div class="col-md-6 col-sm-12 mediaCol-768-12">
                     <div class="row mb-3">
                         <div class="photoTitle">
-                            <h2 style="all:unset;">Team</h2>
+                            <h2 style="all:unset;">联络人</h2>
                         </div>
                     </div>
 
@@ -105,12 +107,13 @@
                         </div>
 
                         <div class="col-md-6 col-sm-12 mediaCol-768-12 pt-5 pb-5">
-                            <div class="name"><b> Mr. Lin Gen
-        
+                            <div class="name"><b> 林根先生
+
+
 
                                 </b></div>
 
-                            <div class="position">President</div>
+                            <div class="position"> 主席</div>
                         </div>
                     </div>
 
@@ -121,12 +124,13 @@
                         </div>
 
                         <div class="col-md-6 col-sm-12 mediaCol-768-12 pt-5 pb-5">
-                            <div class="name"><b> Mr. Zhang Zhixiong
-                              
+                            <div class="name"><b>张志雄律师
+
+
 
                                 </b></div>
 
-                            <div class="position">  General Secretary</div>
+                            <div class="position"> 秘书长</div>
                         </div>
                     </div>
 
@@ -138,8 +142,9 @@
                         </div>
 
                         <div class="col-md-6 col-sm-12 mediaCol-768-12 pt-5 pb-5">
-                            <div class="name"><b>Gabriel Chan</b></div>
-                            <div class="position"> International Advisor</div>
+                            <div class="name"><b>陳嘉濠先生
+                                </b></div>
+                            <div class="position">学生辅导</div>
                         </div>
                     </div>
 
@@ -151,22 +156,23 @@
                         <div class="photoTitle">
                             <h2 style="all:unset;">Mailing Address</h2>
                         </div>
-                        <div class="fs18 colorBk">Chinese Blockchain Olympiad,<br>
-                            C/O International Blockchain Olympiad,<br>
-                            333A, 1W Science Park Avenue,<br>
-                            New Territories, Chinese<br>
+                        <div class="fs18 colorBk w100">中国区块链奥林匹克竞赛<br>
+                            中国香港特别行政区<br>
+                            新界沙田香港科技园<br>
+                            1W科技大道333A室<br>
                             <a href="" target="_blank">cn@ibcol.org</a></div>
 
                     </div>
 
+
+
                     <div class="row mt-5">
                         <div class="photoTitle">
-                            <h2 style="all:unset;">Press Kit </h2>
+                            <h2 style="all:unset;">相关新闻报导资料 </h2>
                         </div>
-                        <a href="" class="btn btn--primary btn--large fs18 fs18-900" style="width: 100%;">DOWNLOAD PRESS
-                            RELEASE</a>
-                        <a href="" class="btn btn--large fs18 fs18-900 colorBgBk colorWt2" style="width: 100%;">DOWNLOAD
-                            HIGH-RES LOGOS
+                        <a href="" class="btn btn--primary btn--large fs18 fs18-900" style="width: 100%;">下载相关新闻报导</a>
+                        <a href="" class="btn btn--large fs18 fs18-900 colorBgBk colorWt2"
+                            style="width: 100%;">下载高像素logo
                         </a>
                     </div>
 
@@ -184,22 +190,19 @@
         <div class="ss-go-top"></div>
         <div class="row">
             <div class="col-md-4 col-sm-4 mt-3 ">
-                <div class="footerHeaderText"><b>About Us</b> </div>
+                <div class="footerHeaderText left"><b>关于我们</b> </div>
                 <div class="">
-                    <p class="footerParaText">The International Blockchain Olympiad (IBCOL) is an annual global
-                        competition inviting
-                        current and recent students to propose solutions for real-world problems with blockchain
-                        technology </p>
+                    <p class="footerParaText justify">
+                        国际区块链奥林匹克竞赛（I​​BCOL）是一年一度的全球性竞赛，邀请在学和刚毕业的学生参加，提供利用区块链技术解决真赛世界困难的方案。 </p>
                 </div>
             </div>
 
             <div class="col-md-4 col-sm-4 mt-3 ">
-                <div class=" footerHeaderText"><b>Follow Us</b> </div>
+                <div class=" footerHeaderText left"><b>关注我们</b> </div>
                 <div class="row">
                     <div class="col-12">
-                        <p class="footerParaText">Follow the International Blockchain Olympiad (IBCOL) on the follow
-                            social media
-                            channels</p>
+                        <p class="footerParaText justify">关注国际区块链奥林匹克（IBCOL）社交媒体频道可得到更多最新资讯
+                        </p>
                     </div>
                     <br>
                     <div class="col-12 ">
@@ -217,15 +220,15 @@
             </div>
 
             <div class="col-md-4 col-sm-4 mt-3">
-                <div class=" footerHeaderText"><b>Contact Us</b> </div>
+                <div class=" footerHeaderText left"><b> 联络我们</b> </div>
                 <div class="row">
                     <div class="col-12">
-                        <p class="footerParaText mb-4">Chinese Blockchain Olympiad<br>
+                        <p class="footerParaText mb-4 justify">中国区块链奥林匹克竞赛<br>
                             <a href=""><b>cn@ibcol.org</b></a></p>
                     </div>
 
                     <div class="col-12">
-                        <p class="footerParaText">2020 International Blockchain Olympiad<br>
+                        <p class="footerParaText justify">国际区块链奥林匹克竞赛<br>
                             <a href=""><b>2020@ibcol.org</b></a>
                         </p>
                     </div>
@@ -245,6 +248,7 @@
             </div>
         </div>
     </footer>
+
 
     <!-- Java Script
         ================================================== -->
