--- a/en/about-cn-bcol.html
+++ b/en/about-cn-bcol.html
@@ -56,7 +56,7 @@
                 <li><a class="NavLinkComponent " route="" href="contact-cn-bcol.html" class="">Contact</a></li>
                 <li class=""><a class="NavLinkComponent regBorder2 colorWt2" route=""
                         href="https://www.ibcol.org/registrar/registrar.html" target="_blank">REGISTER</a></li>
-                        <li><a class="NavLinkComponent" route="" href="../index.html" class="">中文</a></li>
+                        <li><a class="NavLinkComponent" route="" href="../about-cn-bcol.html" class="">中文</a></li>
             </ul>
         </div>
 
@@ -70,7 +70,7 @@
                     <li><a href="faq-cn-bcol.html">FAQ</a></li>
                     <li class="featured"><a href="contact-cn-bcol.html">Contact</a></li>
                     <li><a href="https://www.ibcol.org/registrar/registrar.html" target="_blank">REGISTER</a></li>
-                    <li><a class="NavLinkComponent" route="" href="../index.html" class="">中文</a></li>
+                    <li><a class="NavLinkComponent" route="" href="../about-cn-bcol.html" class="">中文</a></li>
                 </ul>
             </div>
         </nav>
@@ -184,7 +184,8 @@
     <div class="home-content__button aboveFooterBtn">
         <a href="https://www.ibcol.org/registrar/registrar.html" target="_blank"
             class="btn btn--primary btn--large fs18">REGISTER</a>
-        <a href="https://www.ibcol.org/index.html" target="_blank" class="btn btn--large fs18">FIND OUT MORE </a>
+        <a href="https://www.ibcol.org/index.html" target="_blank" class="btn btn--large fs18">FIND OUT MORE
+ </a>
     </div>
 
 
