--- a/en/index.html
+++ b/en/index.html
@@ -55,7 +55,7 @@
                 <li><a class="NavLinkComponent colorWt" route="" href="contact-cn-bcol.html" class="">Contact</a></li>
                 <li><a class="NavLinkComponent colorWt regBorder" route=""
                                  href="https://www.ibcol.org/registrar/registrar.html" target="_blank">REGISTER</a></li>        
-                                 <li><a class="NavLinkComponent" route="" href="../index.html" class="">中文</a></li>
+                                 <li><a class="NavLinkComponent colorWt" route="" href="../index.html" class="">中文</a></li>
             </ul>
         </div>
 
@@ -97,6 +97,7 @@
                     <a href="https://www.ibcol.org/registrar/registrar.html" target="_blank"
                         class="btn btn--primary btn--large fs18">REGISTER</a>
                     <a href="https://www.ibcol.org/index.html" target="_blank" class="btn btn--large fs18">FIND OUT MORE
+
                     </a>
                 </div>
             </div>
@@ -309,7 +310,8 @@
     <div class="home-content__button aboveFooterBtn">
         <a href="https://www.ibcol.org/registrar/registrar.html" target="_blank"
             class="btn btn--primary btn--large fs18">REGISTER</a>
-        <a href="https://www.ibcol.org/index.html" target="_blank" class="btn btn--large fs18">FIND OUT MORE </a>
+        <a href="https://www.ibcol.org/index.html" target="_blank" class="btn btn--large fs18">FIND OUT MORE
+ </a>
     </div>
 
 
