--- a/get-started-with-cn-bcol.html
+++ b/get-started-with-cn-bcol.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Get started for the CN-BCOL 2020 Chinese Blockchain Olympiad | IBCOL 2020 International Blockchain Olympiad
+    <title>开始参加 - CN-BCOL 2020 中国区块链奥林匹克竞赛 | IBCOL 国际区块链奥林匹克竞赛
     </title>
     <link rel="icon" href="./images/logo/IBCOL-CN.png" type="image/gif" sizes="16x16">
     <meta name="description" content="" />
@@ -45,34 +45,37 @@
     <header class="s-header">
         <div class="header-logo">
             <a class="site-logo" href="index.html">
-                <img src="images/logo/resized/IBCOL CN Horizontal v2.png" alt="IBCOL: International Blockchain Olympiad" />
+                <img src="images/logo/resized/IBCOL CN Horizontal v2.png"
+                    alt="IBCOL: International Blockchain Olympiad" />
             </a>
         </div>
         <div class="desktop-nav">
             <ul class="nav_list">
-                <li><a class="NavLinkComponent " route="" href="about-cn-bcol.html">About</a></li>
-                <li><a class="NavLinkComponent " route="" href="how-to-join-cn-bcol.html">How To Join</a></li>
+                <li><a class="NavLinkComponent " route="" href="about-cn-bcol.html">关于我们</a></li>
+                <li><a class="NavLinkComponent " route="" href="how-to-join-cn-bcol.html"> 如何参加</a></li>
                 <li><a class="NavLinkComponent pageAnchorColor" route="" href="get-started-with-cn-bcol.html">Get
                         Started</a>
                 </li>
-                <li><a class="NavLinkComponent" route="" href="faq-cn-bcol.html" class="">FAQ</a></li>
-                <li><a class="NavLinkComponent " route="" href="contact-cn-bcol.html" class="">Contact</a></li>
+                <li><a class="NavLinkComponent" route="" href="faq-cn-bcol.html" class="">常见问题 </a></li>
+                <li><a class="NavLinkComponent " route="" href="contact-cn-bcol.html" class=""> 联络我们</a></li>
                 <li class=""><a class="NavLinkComponent regBorder2 colorWt2" route=""
-                        href="https://www.ibcol.org/registrar/registrar.html" target="_blank">REGISTER</a></li>
-                <li><a class="NavLinkComponent " route="" href="contact-cn-bcol.html" class="">中文</a></li>
+                        href="https://www.ibcol.org/registrar/registrar.html" target="_blank">注册</a></li>
+                <li><a class="NavLinkComponent" route="" href="./en/get-started-with-cn-bcol.html" class="">EN</a></li>
             </ul>
         </div>
 
         <nav class="header-nav">
-            <a href="#0" class="header-nav__close" title="close"><span>Close</span></a>
+            <a href="#0" class="header-nav__close" title="close"><span>关闭</span></a>
             <div class="header-nav__content">
                 <ul class="header-nav__list">
-                    <li><a href="about-cn-bcol.html">About</a></li>
-                    <li><a href="how-to-join-cn-bcol.html">How To Join</a></li>
-                    <li><a href="get-started-with-cn-bcol.html">Get Started</a></li>
-                    <li><a href="faq-cn-bcol.html">FAQ</a></li>
-                    <li class="featured"><a href="contact-cn-bcol.html">Contact</a></li>
-                    <li><a href="https://www.ibcol.org/registrar/registrar.html" target="_blank">REGISTER</a></li>
+                    <li><a href="about-cn-bcol.html">关于我们</a></li>
+                    <li><a href="how-to-join-cn-bcol.html"> 如何参加</a></li>
+                    <li><a href="get-started-with-cn-bcol.html"> 参赛详情</a></li>
+                    <li><a href="faq-cn-bcol.html">常见问题 </a></li>
+                    <li class="featured"><a href="contact-cn-bcol.html"> 联络我们</a></li>
+                    <li><a href="https://www.ibcol.org/registrar/registrar.html" target="_blank">注册</a></li>
+                    <li><a class="NavLinkComponent" route="" href="./en/get-started-with-cn-bcol.html" class="">EN</a>
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -85,34 +88,35 @@
     <section class="s-section target-section topSection">
         <div class="container-fluid">
             <div class="row section-header">
-                <h1 class="headerBlueText">GET STARTED FOR THE 2020 CHINESE BLOCKCHAIN OLYMPIAD</h1>
+                <h1 class="headerBlueText">开始参加中国区块链奥林匹克竞赛2020（CN-BCOL 2020）</h1>
             </div>
         </div>
 
-        <div class="container-fluid mt-5 colorBk">
+        <div class="container-fluid  colorBk">
             <div class="row">
                 <div class="col-md-6 col-sm-12 col-b-12-1200">
                     <div class="row">
                         <div class="photoTitle mb-5">
-                            <h2 style="all:unset;">Eligibility</h2>
+                            <h2 style="all:unset;">参加CN-BCOL 2020参赛者条款</h2>
                         </div>
-                        <div class="justify">Any current or recent student may register as a competitor.. A current
-                            student is
-                            defined as a person of any age that is enrolled in a recognized academic institution. A
-                            recent student would have been a current student until 3 years ago (5 July 2017). An
-                            individual may be attached to an academic institution by being ever enrolled in it. A
-                            recognized institution is an accredited educational institution or an institution that may
-                            grant a degree or diploma. All institutions and competitors must be registered with the
-                            <a href="https://www.ibcol.org/registrar/registrar.html" target="_blank">IBCOL Registrar
-                                Office</a>.</div>
+                        <div class="justify">在学和刚毕业的中学生＆大学生<br>
+                            1-6人为一组<br>
+                            每队可提交多于一份白皮书<br>
+                            <br>
+                            *在学学生是指已入学或已被取录的认可学术机构的任何年龄的人<br>
+                            *刚毕业是指2017年7月后毕业的学生都被认可<br>
+                            * 认可的机构是指认可的教育机构或可以授予学位或文凭的机构<br>
+                            *如果每个团队成员来自不同的学术机构，则每个团队都必须提名一个代表学术机构，该代表机构确定团队和项目代表的国家或地区<br>
+                            *所有参赛者必须在中国奥林匹克竞赛合作伙伴机构處注册<br>
+                            *如遇到争议，IBCOL及CN-BCOL保留最终决定权</div>
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-12 col-b-12-1200 pt-5">
                     <div class="row getStartRow">
                         <a href="https://www.ibcol.org/registrar/registrar.html" target="_blank"
-                            class="btn btn--primary btn--large fs18f" style="width: 100%;">REGISTER VIA FORM</a>
+                            class="btn btn--primary btn--large fs18f" style="width: 100%;">透过申请表格注册</a>
                         <a href="https://www.ibcol.org/registrar/registrar.html" target="_blank"
-                            class="btn btn--large fs18f colorBgBk colorWt2" style="width: 100%;">REGISTER VIA EMAIL</a>
+                            class="btn btn--large fs18f colorBgBk colorWt2" style="width: 100%;">透过电子邮件注册</a>
                     </div>
                 </div>
             </div>
@@ -124,28 +128,26 @@
                 <div class="col-md-6 col-sm-12 col-b-12-1200">
                     <div class="row">
                         <div class="photoTitle mb-5">
-                            <h2 style="all:unset;">Submission</h2>
+                            <h2 style="all:unset;">IBCOL 2020详情</h2>
                         </div>
-                        <div class="justify">Projects are submitted by teams of one to six eligible competitors. Each
-                            team must
-                            nominate one representative academic institution, if any of the team members are from
-                            different academic institutions. This representative institution determines which country or
-                            territory the team and thus project will represent. Teams may be composed of members from
-                            different countries/territories or academic institutions. A team may submit more than one
-                            project. The Chinese Blockchain Olympiad accepts project submissions on a rolling basis
-                            with
-                            a hard deadline in the 15th of June 2020 at 11:59pm.</div>
+                        <div class="justify">申请资格:任何年龄，任何身份，任何地区的学生（毕业不超过3年）<br>
+                            IBCOL 日子: 3-5 July 2020 (全日活动)<br>
+                            时间: 9am to 9pm (GMT+8)<br>
+                            IBCOL 比赛日: 第一天开幕，第二天研讨会，第三天项目路演<br>
+                            比赛形式: 线上比赛（Slack, Zoom, 腾讯会议）<br>
+                            国家代表队数量: 12队<br>
+                            报名费: RMB100<br>
+                            培训课程&辅导课程: 开放给所有成功报名学生申请<br>
+                            奖学金: 开放给所有成功报名学生申请</div>
 
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-12 col-b-12-1200 pt-5">
                     <div class="row getStartRow">
                         <a href="https://www.ibcol.org/submission.html" target="_blank"
-                            class="btn btn--primary btn--large fs18f" style="width: 100%;">SUBMIT PROJECT VIA
-                            FORM</a>
+                            class="btn btn--primary btn--large fs18f" style="width: 100%;">透过表格提交白皮书</a>
                         <a href="https://www.ibcol.org/submission.html" target="_blank"
-                            class="btn btn--large fs18f colorBgBk colorWt2" style="width: 100%;">SUBMIT PROJECT VIA
-                            EMAIL </a>
+                            class="btn btn--large fs18f colorBgBk colorWt2" style="width: 100%;">透过电子邮件提交白皮书 </a>
                     </div>
                 </div>
             </div>
@@ -157,7 +159,7 @@
                 <div class="col-md-6 col-sm-12 col-b-12-1200">
                     <div class="row">
                         <div class="photoTitle mb-5">
-                            <h2 style="all:unset;">Resources</h2>
+                            <h2 style="all:unset;">资源下载</h2>
                         </div>
                     </div>
                 </div>
@@ -165,13 +167,13 @@
             <div class="row">
                 <div class="col-md-2 col-sm-12 toolsImgMedia1 mediaResourceImg">
                     <div class="">
-                        <img class="getStartImg mt-2" src="images/toolsImg/slack4848.png">
+                        <img class="getStartImg mt-2" src="images/toolsImg/slack2.png">
                     </div>
                 </div>
                 <div class="col-md-10 col-sm-12 mediaResourceText">
-                    <div class=""><b>IBCOL 2020 SLACK COMMUNITY </b><br>
-                        Connect with fellow students and mentors, receive the latest updates. Request an invite at
-                        <a href="">cn@ibcol.org</a></div>
+                    <div class=""><b>腾讯会议
+                        </b><br>
+                        与iCollege联系，获取最新信息。info@iCollege.hk</div>
                 </div>
             </div>
 
@@ -182,10 +184,9 @@
                     </div>
                 </div>
                 <div class="col-md-10 col-sm-12 mediaResourceText">
-                    <div class=""><b>SAMPLE WHITEPAPER FORMAT</b><br>
-
-                        Based on a style guide from a Canadian university. Only a guideline, not a requirement.
-                        Available for <a href="">download</a></div>
+                    <div class=""><b>白皮书样版</b><br>
+                   
+                        这是供参考的样版，不是必须要求的格式，<a href="">可下载</a></div>
                 </div>
             </div>
 
@@ -194,10 +195,9 @@
                     <div class=""><img class="getStartImg mt-2" src="images/toolsImg/wp4848.png"></div>
                 </div>
                 <div class="col-md-10 col-sm-12 mediaResourceText">
-                    <div class=""><b>SAMPLE POSTERBOARD FORMATS</b><br>
-
-                        Free templates based on standard dimensions (36×48”). Only a guideline, not a requirement.
-                        Available for <a href="">download</a></div>
+                    <div class=""><b>海报演示版格式
+                     </b><br>
+                     免费模板标准尺寸（36×48”），这是供参考的样版，不是必须要求的格式，<a href="">可下载</a></div>
                 </div>
             </div>
         </div>
@@ -209,8 +209,8 @@
 
     <div class="home-content__button aboveFooterBtn">
         <a href="https://www.ibcol.org/registrar/registrar.html" target="_blank"
-            class="btn btn--primary btn--large fs18">REGISTER</a>
-        <a href="https://www.ibcol.org/faq.html" target="_blank" class="btn btn--large fs18">FAQ </a>
+            class="btn btn--primary btn--large fs18">注册</a>
+        <a href="https://www.ibcol.org/faq.html" target="_blank" class="btn btn--large fs18">常见问题 </a>
     </div>
 
 
@@ -221,22 +221,19 @@
         <div class="ss-go-top"></div>
         <div class="row">
             <div class="col-md-4 col-sm-4 mt-3 ">
-                <div class="footerHeaderText"><b>About Us</b> </div>
+                <div class="footerHeaderText"><b>关于我们</b> </div>
                 <div class="">
-                    <p class="footerParaText">The International Blockchain Olympiad (IBCOL) is an annual global
-                        competition inviting
-                        current and recent students to propose solutions for real-world problems with blockchain
-                        technology </p>
+                    <p class="footerParaText justify">
+                        国际区块链奥林匹克竞赛（I​​BCOL）是一年一度的全球性竞赛，邀请在学和刚毕业的学生参加，提供利用区块链技术解决真赛世界困难的方案。 </p>
                 </div>
             </div>
 
             <div class="col-md-4 col-sm-4 mt-3 ">
-                <div class=" footerHeaderText"><b>Follow Us</b> </div>
+                <div class=" footerHeaderText"><b>关注我们</b> </div>
                 <div class="row">
                     <div class="col-12">
-                        <p class="footerParaText">Follow the International Blockchain Olympiad (IBCOL) on the follow
-                            social media
-                            channels</p>
+                        <p class="footerParaText justify">关注国际区块链奥林匹克（IBCOL）社交媒体频道可得到更多最新资讯
+                        </p>
                     </div>
                     <br>
                     <div class="col-12 ">
@@ -254,15 +251,15 @@
             </div>
 
             <div class="col-md-4 col-sm-4 mt-3">
-                <div class=" footerHeaderText"><b>Contact Us</b> </div>
+                <div class=" footerHeaderText"><b> 联络我们</b> </div>
                 <div class="row">
                     <div class="col-12">
-                        <p class="footerParaText mb-4">Chinese Blockchain Olympiad<br>
+                        <p class="footerParaText mb-4 justify">中国区块链奥林匹克竞赛<br>
                             <a href=""><b>cn@ibcol.org</b></a></p>
                     </div>
 
                     <div class="col-12">
-                        <p class="footerParaText">2020 International Blockchain Olympiad<br>
+                        <p class="footerParaText justify">国际区块链奥林匹克竞赛<br>
                             <a href=""><b>2020@ibcol.org</b></a>
                         </p>
                     </div>
