--- a/en/faq-cn-bcol.html
+++ b/en/faq-cn-bcol.html
@@ -58,7 +58,7 @@
                 <li><a class="NavLinkComponent " route="" href="contact-cn-bcol.html" class="">Contact</a></li>
                 <li class=""><a class="NavLinkComponent regBorder2 colorWt2" route=""
                         href="https://www.ibcol.org/registrar/registrar.html" target="_blank">REGISTER</a></li>
-                        <li><a class="NavLinkComponent" route="" href="../index.html" class="">中文</a></li>
+                        <li><a class="NavLinkComponent" route="" href="../faq-cn-bcol.html" class="">中文</a></li>
             </ul>
         </div>
 
@@ -72,7 +72,7 @@
                     <li><a href="faq-cn-bcol.html">FAQ</a></li>
                     <li class="featured"><a href="contact-cn-bcol.html">Contact</a></li>
                     <li><a href="https://www.ibcol.org/registrar/registrar.html" target="_blank">REGISTER</a></li>
-                    <li><a class="NavLinkComponent" route="" href="../index.html" class="">中文</a></li>
+                    <li><a class="NavLinkComponent" route="" href="../faq-cn-bcol.html" class="">中文</a></li>
                 </ul>
             </div>
         </nav>
