--- a/faq-cn-bcol.html
+++ b/faq-cn-bcol.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>FAQ of the CN-BCOL 2020 Chinese Blockchain Olympiad | IBCOL 2020 International Blockchain Olympiad
+    <title>常见问题 - CN-BCOL 2020 中国区块链奥林匹克竞赛 | IBCOL 国际区块链奥林匹克竞赛
     </title>
     <link rel="icon" href="./images/logo/IBCOL-CN.png" type="image/gif" sizes="16x16">
     <meta name="description" content="" />
@@ -45,33 +45,35 @@
     <header class="s-header">
         <div class="header-logo">
             <a class="site-logo" href="index.html">
-                <img src="images/logo/resized/IBCOL CN Horizontal v2.png" alt="IBCOL: International Blockchain Olympiad" />
+                <img src="images/logo/resized/IBCOL CN Horizontal v2.png"
+                    alt="IBCOL: International Blockchain Olympiad" />
             </a>
         </div>
         <div class="desktop-nav">
             <ul class="nav_list">
-                <li><a class="NavLinkComponent " route="" href="about-cn-bcol.html">About</a></li>
-                <li><a class="NavLinkComponent " route="" href="how-to-join-cn-bcol.html">How To Join</a></li>
-                <li><a class="NavLinkComponent " route="" href="get-started-with-cn-bcol.html">Get Started</a>
+                <li><a class="NavLinkComponent " route="" href="about-cn-bcol.html">关于我们</a></li>
+                <li><a class="NavLinkComponent " route="" href="how-to-join-cn-bcol.html"> 如何参加</a></li>
+                <li><a class="NavLinkComponent " route="" href="get-started-with-cn-bcol.html"> 参赛详情</a>
                 </li>
-                <li><a class="NavLinkComponent pageAnchorColor" route="" href="faq-cn-bcol.html" class="">FAQ</a></li>
-                <li><a class="NavLinkComponent " route="" href="contact-cn-bcol.html" class="">Contact</a></li>
+                <li><a class="NavLinkComponent pageAnchorColor" route="" href="faq-cn-bcol.html" class="">常见问题 </a></li>
+                <li><a class="NavLinkComponent " route="" href="contact-cn-bcol.html" class=""> 联络我们</a></li>
                 <li class=""><a class="NavLinkComponent regBorder2 colorWt2" route=""
-                        href="https://www.ibcol.org/registrar/registrar.html" target="_blank">REGISTER</a></li>
-                <li><a class="NavLinkComponent" route="" href="contact-cn-bcol.html" class="">中文</a></li>
+                        href="https://www.ibcol.org/registrar/registrar.html" target="_blank">注册</a></li>
+                <li><a class="NavLinkComponent" route="" href="./en/faq-cn-bcol.html" class="">EN</a></li>
             </ul>
         </div>
 
         <nav class="header-nav">
-            <a href="#0" class="header-nav__close" title="close"><span>Close</span></a>
+            <a href="#0" class="header-nav__close" title="close"><span>关闭</span></a>
             <div class="header-nav__content">
                 <ul class="header-nav__list">
-                    <li><a href="about-cn-bcol.html">About</a></li>
-                    <li><a href="how-to-join-cn-bcol.html">How To Join</a></li>
-                    <li><a href="get-started-with-cn-bcol.html">Get Started</a></li>
-                    <li><a href="faq-cn-bcol.html">FAQ</a></li>
-                    <li class="featured"><a href="contact-cn-bcol.html">Contact</a></li>
-                    <li><a href="https://www.ibcol.org/registrar/registrar.html" target="_blank">REGISTER</a></li>
+                    <li><a href="about-cn-bcol.html">关于我们</a></li>
+                    <li><a href="how-to-join-cn-bcol.html"> 如何参加</a></li>
+                    <li><a href="get-started-with-cn-bcol.html"> 参赛详情</a></li>
+                    <li><a href="faq-cn-bcol.html">常见问题 </a></li>
+                    <li class="featured"><a href="contact-cn-bcol.html"> 联络我们</a></li>
+                    <li><a href="https://www.ibcol.org/registrar/registrar.html" target="_blank">注册</a></li>
+                    <li><a class="NavLinkComponent" route="" href="./en/faq-cn-bcol.html" class="">EN</a></li>
                 </ul>
             </div>
         </nav>
@@ -84,39 +86,41 @@
     <section class="s-section target-section topSection">
         <div class="container-fluid">
             <div class="row section-header ">
-                <h1 class="headerBlueText">FREQUENTLY ASKED QUESTIONS FOR THE 2020 CHINESE BLOCKCHAIN OLYMPIAD</h1>
+                <h1 class="headerBlueText">关于中国区块链奥林匹克竞赛2020（CN-BCOL 2020）常见问题</h1>
             </div>
         </div>
 
         <div class="container-fluid">
             <div class="row">
                 <div class="photoTitle">
-                    <h2 style="all:unset;">About CN-BCOL 2020</h2>
+                    <h2 style="all:unset;">关于我们 CN-BCOL 2020</h2>
                 </div>
             </div>
         </div>
 
 
-        <div class="container-fluid ">
+        <div class="container-fluid mb-5">
             <div class="row  colorBk">
                 <div class="fs24"><b>
-                        <h3 style="all:unset;">Who is eligible to participate?</h3>
+                        <h3 style="all:unset;">关于参加CN-BCOL常见问题：</h3>
                     </b></div>
                 <div class="fs18f">
-                    <div class="justify"> <b>Individual Eligibility</b> — Any current or recent student may register as
-                        a competitor.
-                        A current student is defined as a person of any age that is enrolled in a recognized academic
-                        institution. A recent student would have been a current student until 3 years ago (July 5th,
-                        2017).
-                        An individual may be attached to an academic institution by being ever enrolled in it. A
-                        recognized
-                        institution is an accredited educational institution or an institution that may grant a degree
-                        or
-                        diploma. All institutions and competitors must be registered with the <a
-                            href="https://www.ibcol.org/registrar/registrar.html" target="_blank">IBCOL Registrar
-                            Office</a>.
+                    <div class="justify">我完全不会区块链这方面的知识，我可以参加竞赛吗？<br>
+                        可以的，本次活动的目的是培养全球下一代的区块链专业人士。参与者有机会从零开始学习区块链，并将他们学到的知识应用于竞赛中。<br>培训详情请咨询 iCollege.
+                        <br><br>
+                        我不想参加培训课程，可以参加竞赛吗？<br>
+                        可以的，培训课程完全自愿性质参加，但我们建议参赛者有区块链相关的知识，这样参赛才会有竞争力。
+                        <br><br>
+                        我不是中国国籍学生，我可以参加CN-BCOL吗？<br>
+                        只要你代表的学校是中国国内的认可的学校就可以参加CN-BCOL.
+                        <br><br>
+                        我可以用中文写白皮书吗？<br>
+                        可以的，我们接受中文书写的白皮书。
+                        <br><br>
+                        我参赛时使用语言是普通话，可以吗？<br>
+                        可以的，如果进入国际赛，英文不太好的团队可以向IBCOL陈述。 IBCOL会作出适当的安排，例如派志愿者当翻译。
                     </div>
-                    <div class="mt-5 justify">
+                    <!-- <div class="mt-5 justify">
                         <b>Team Eligibility</b> — Projects are submitted by teams of one to six eligible competitors.
                         Each team
                         must nominate one representative academic institution, if any of the team members are from
@@ -126,12 +130,12 @@
                         countries/territories or academic institutions. The CN-BCOL works with those declaring their
                         primary
                         institutions from the Chinese.
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
 
-        <div class="container-fluid mt-5">
+        <!-- <div class="container-fluid mt-5">
             <div class="row  colorBk">
                 <div class="fs24"><b>
                         <h3 style="all:unset;">What is the process for participating?</h3>
@@ -160,16 +164,16 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <div class="container-fluid mt-5">
             <div class="row  colorBk">
                 <div class="fs24"><b>
-                        <h3 style="all:unset;">What are the criteria for project evaluations?</h3>
+                        <h3 style="all:unset;">白皮书评分的机构和准则？
+                        </h3>
                     </b></div>
                 <div class="fs18f">
-                    <div class="justify"> The CN-BCOL shall evaluate projects based on the guidelines set forth by the
-                        <a href="https://www.ibcol.org/" target="_blank">International Blockchain Olympiad</a>.
+                    <div class="justify"> 参加中国区块链奥林匹克竞赛的白皮书是由中国区块链奥林匹克委员会进行评分，而CN-BCOL应根据国际区块链奥林匹克委员会会制定的指南评分白皮书。
                     </div>
 
                 </div>
@@ -180,35 +184,34 @@
 
 
 
-
-
     <div class="home-content__button aboveFooterBtn mt-5">
         <a href="https://www.ibcol.org/registrar/registrar.html" target="_blank"
-            class="btn btn--primary btn--large fs18">REGISTER</a>
-        <a href="https://www.ibcol.org/faq.html" target="_blank" class="btn btn--large fs18">IBCOL FAQ </a>
+            class="btn btn--primary btn--large fs18">注册</a>
+        <a href="https://www.ibcol.org/faq.html" target="_blank" class="btn btn--large fs18">IBCOL 常见问题 </a>
     </div>
+
+
+    <div class="" style="height: 150px;"></div>
+
 
 
     <footer class="paddingAdjustedFooter">
         <div class="ss-go-top"></div>
         <div class="row">
             <div class="col-md-4 col-sm-4 mt-3 ">
-                <div class="footerHeaderText"><b>About Us</b> </div>
+                <div class="footerHeaderText left"><b>关于我们</b> </div>
                 <div class="">
-                    <p class="footerParaText">The International Blockchain Olympiad (IBCOL) is an annual global
-                        competition inviting
-                        current and recent students to propose solutions for real-world problems with blockchain
-                        technology </p>
+                    <p class="footerParaText justify">
+                        国际区块链奥林匹克竞赛（I​​BCOL）是一年一度的全球性竞赛，邀请在学和刚毕业的学生参加，提供利用区块链技术解决真赛世界困难的方案。 </p>
                 </div>
             </div>
 
             <div class="col-md-4 col-sm-4 mt-3 ">
-                <div class=" footerHeaderText"><b>Follow Us</b> </div>
+                <div class=" footerHeaderText left"><b>关注我们</b> </div>
                 <div class="row">
                     <div class="col-12">
-                        <p class="footerParaText">Follow the International Blockchain Olympiad (IBCOL) on the follow
-                            social media
-                            channels</p>
+                        <p class="footerParaText justify">关注国际区块链奥林匹克（IBCOL）社交媒体频道可得到更多最新资讯
+                        </p>
                     </div>
                     <br>
                     <div class="col-12 ">
@@ -226,15 +229,15 @@
             </div>
 
             <div class="col-md-4 col-sm-4 mt-3">
-                <div class=" footerHeaderText"><b>Contact Us</b> </div>
+                <div class=" footerHeaderText left"><b> 联络我们</b> </div>
                 <div class="row">
                     <div class="col-12">
-                        <p class="footerParaText mb-4">Chinese Blockchain Olympiad<br>
+                        <p class="footerParaText mb-4 justify">中国区块链奥林匹克竞赛<br>
                             <a href=""><b>cn@ibcol.org</b></a></p>
                     </div>
 
                     <div class="col-12">
-                        <p class="footerParaText">2020 International Blockchain Olympiad<br>
+                        <p class="footerParaText justify">国际区块链奥林匹克竞赛<br>
                             <a href=""><b>2020@ibcol.org</b></a>
                         </p>
                     </div>
@@ -254,6 +257,7 @@
             </div>
         </div>
     </footer>
+
 
     <!-- Java Script
         ================================================== -->
